--- a/gallary.html
+++ b/gallary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery of My Madam Ji</title>
+    <title>Gallery</title>
     <style>
         * {
             margin: 0;
@@ -475,7 +475,7 @@
 
     <!-- Pookie Button -->
     <div class="pookie-btn-container">
-        <button class="pookie-btn">🌸 Pookie 🌸</button>
+        <button class="pookie-btn">🌸 letter 🌸</button>
     </div>
 
     <!-- Pookie Message Modal -->
@@ -488,18 +488,18 @@
             <div class="pookie-decoration pookie-star2">✨</div>
             <div class="pookie-close">×</div>
             <div class="pookie-message">
-                You’re my favorite distraction, my sweetest motivation, and the reason behind so many of my smiles. 😊 Every little thing about you—your laughter, your warmth, the way you just get me—it all makes my heart do that happy little dance.🌈✨🥰
+                😊🌈“Sing like no one’s listening, love like you’ve never been hurt, dance like nobody’s watching, and live like it’s heaven on earth.”✨🥰
             </div>
         </div>
     </div>
 
     <script>
         const messages = [
-            "My Queen, My Everything! 👑💖",
-            "Your smile lights up my world ✨",
-            "Forever yours, my precious! 💝",
-            "You're my dream come true 🌙",
-            "My heart beats only for you 💓",
+            "Reality called, I hung up!📞💖",
+            "I’m 99% sure I’m allergic to work ✨",
+            "Part-time superhero 🦸‍♀️, full-time diva! 💝",
+            "Living my best life.except for Mondays 🌙",
+            ". I’ll ruin your life, but you’ll enjoy the ride 💓",
             "My beautiful Madam Ji 🌹",
             "You're my perfect match 💑",
             "Love you to the moon & back 🌟",
